--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -11,6 +11,7 @@
 <body>
   <h1 style="color: green">Admin dashboard</h1>
   <p>This HTML file is served from the admin templates directory</p>
+  <p>and here's another change</p>
 </body>
 
 </html>
