--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -12,6 +12,7 @@
   <h1 style="color: green">Admin dashboard</h1>
   <p>This HTML file is served from the admin templates directory</p>
   <p>and here's another change</p>
+  <p>and a third</p>
 </body>
 
 </html>
