testing local change + commit followed by heroku push

--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1 style="color: blue">Index</h1>
   <p>This is an HTML file served up by Flask!!!!!!!!!!!</p>
+  <p>and I can test changes locally then push to Heroku</p>
 </body>
 
 </html>
