--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <title>Index</title>
 </head>
 
@@ -11,6 +12,8 @@
   <h1 style="color: blue">Index</h1>
   <p>This is an HTML file served up by Flask!!!!!!!!!!!</p>
   <p>and I can test changes locally then push to Heroku</p>
+  <img src = "{{url_for('static', filename='img/Photo 2.jpg')}}">
+  <script src = "{{ url_for('static', filename='js/app.js')}}"></script>
 </body>
 
 </html>
