--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -1,6 +1,6 @@
 {% extends "public/templates/public_template.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Home!!!!!!!!!!!!!!!!!!!!!!{% endblock %}
 
 {% block main %}
 
@@ -8,6 +8,7 @@
   <div class="row">
     <div class="col">
       <h1>Home!!!!!!!!!!!!!!!!</h1>
+      <p>home is where the heart is</p>
     </div>
   </div>
 </div>
