--- a/app/templates/public/templates/public_template.html
+++ b/app/templates/public/templates/public_template.html
@@ -40,7 +40,7 @@
 
 </nav>
     <main>
-      {% block main %}{% endblock %}
+      {% block main %}{% endblock %}Here's my home
    </main>
 
     <!-- Optional JavaScript -->
