--- a/app/templates/public/jinja.html
+++ b/app/templates/public/jinja.html
@@ -34,6 +34,49 @@
         <hr>
         <p>{{ repeat("Jinja is great! ", 10) }}</p>
 
+        <h4>Dictionary value</h4>
+        <hr>
+        <p>Tony's age is {{ friends["Tony"] }}</p>
+
+        <h4>Class attributes</h4>
+        <hr>
+        <p>{{ my_remote.description }}</p>
+
+        <h4>Class methods</h4>
+        <hr>
+        <p>{{ my_remote.pull() }}</p>
+
+        <h4>Create a class</h4>
+        <hr>
+          {% set new_repo = GitRemote(
+              name="Learning Flask",
+              description="Learn the NEW Flask web framework for Python",
+              domain="https://github.com/Julian-Nash/learning-flask.git")
+          %}
+        <p>{{ new_repo.description }}</p>
+
+        <h4>Unpack variables</h4>
+        <hr>
+        {% set foo, bar = colors %}
+        <p>{{ foo }}</p>
+        <p>{{ bar }}</p>
+
+        <h4>Conditional if</h4>
+        <hr>
+        {% if cool %}
+          <p>Cool = {{ cool }}</p>
+        {% endif %}
+
+        <h4>Conditional if/elif</h4>
+        <hr>
+        {% if my_age < 18 %}
+        <p>No entry</p>
+        {% elif my_age <= 25 %}
+        <p>You may enter</p>
+        {% else %}
+        <p>Entry denied. You're not cool enough</p>
+        {% endif %}
+
     </div>
   </div>
 </div>
