--- a/app/templates/public/client_create.html
+++ b/app/templates/public/client_create.html
@@ -1,68 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      <title>CM Client Creation Tool</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" href="https://img.createsend1.com/favicon.ico?3" />
-      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   </head>
-   <body>
-      <nav class="navbar navbar-expand-md">
-         <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='img/cm.png')}}" height="48"></a>
-         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-         <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="main-navigation">
-            <ul class="navbar-nav">
-               <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-               </li>
-            </ul>
-         </div>
-      </nav>
-      <header class="page-header header container-fluid">
-         <div class="description">
-            <h1>CM Client Creation Tool</h1>
-            <p>Use this tool to quickly and easily create demo clients for prospects</p>
-         </div>
-      </header>
-      <div class="container features">
-         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-               <h3 class="feature-title">Create New Client</h3>
-               <p>Enter your email adddress and the details of the prospect you are creating this demo for</p>
-            </div>
-            <form id="client_creator" class="col-lg-6 col-md-6 col-sm-12">
-               <h3 class="feature-title">&nbsp</h3>
-               <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Prospect Country" name="" id="prospect_country">
-               </div>
-               <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Prospect Name" name="">
-               </div>
-               <div class="form-group">
-                 <select class="custom-select">
-                    <option selected>Prospect Time Zone</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-               <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
-            </form>
-         </div>
-      </div>
+{% extends "public/templates/cm_template.html" %}
 
-      <script src="{{ url_for('static', filename='js/app.js')}}"></script>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-   </body>
-</html>
+{% block title %}CM Client Creation Tool{% endblock %}
+
+{% block main %}
+
+<<div class="container features">
+   <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+         <h3 class="feature-title">Create New Client</h3>
+         <p>Enter your email adddress and the details of the prospect you are creating this demo for</p>
+      </div>
+      <form id="client_creator" class="col-lg-6 col-md-6 col-sm-12" action="/client_create" method="POST">
+         <h3 class="feature-title">&nbsp</h3>
+         <div class="form-group">
+            <input type="text" class="form-control" placeholder="Prospect Country" name="prospect_country" id="prospect_country">
+         </div>
+         <div class="form-group">
+            <input type="text" class="form-control" placeholder="Prospect Name" name="prospect_name">
+         </div>
+         <div class="form-group">
+           <select class="custom-select" name="prospect_tz">
+              <option selected>Prospect Time Zone</option>
+              <option value="(GMT-05:00) Eastern Time (US & Canada)">(GMT-05:00) Eastern Time (US & Canada)</option>
+              <option value="(GMT-06:00) Central Time (US & Canada)">Central Time (US & Canada)</option>
+              <option value="(GMT-07:00) Arizona">Arizona</option>
+              <option value="(GMT-07:00) Mountain Time (US & Canada)">Mountain Time</option>
+              <option value="(GMT-08:00) Pacific Time (US & Canada)">Pacific Time</option>
+            </select>
+          </div>
+         <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+         {% if feedback %}
+         <p class="text-danger float-right">{{ feedback }}</p>
+         {% endif %}
+      </form>
+   </div>
+</div>
+
+{% endblock %}
