--- a/app/templates/public/templates/cm_template.html
+++ b/app/templates/public/templates/cm_template.html
@@ -30,8 +30,8 @@
       </nav>
       <header class="page-header header container-fluid">
          <div class="description">
-            <h1>CM Client Creation Tool</h1>
-            <p>Use this tool to quickly and easily create demo clients for prospects</p>
+            <h1>CM Demo Creation Tool</h1>
+            <p>Use this tool to quickly and easily create demo clients & dummy data for prospects</p>
          </div>
       </header>
       <main>
