--- a/app/templates/public/client_create.html
+++ b/app/templates/public/client_create.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-<<div class="container features">
+<div class="container features">
    <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12">
          <h3 class="feature-title">Create New Client</h3>
