--- a/app/templates/public/jinja.html
+++ b/app/templates/public/jinja.html
@@ -8,10 +8,17 @@
   <div class="row">
     <div class="col">
       <h1>Jinja</h1>
+
+      <hr>
+      <h4>Testing my Jinja code</h4>
+      <hr>
+      <p>Hello I am testing Jinja like this: {{ testingjinja }} but why does this one work {{ my_name }}</p>
+
+
       <hr>
       <h4>Accessing an objects value</h4>
       <hr>
-      <p>Hello {{ my_name }}!</p>
+      <p>Hello {{ my_name }}! and {{ my_name2 }}!!</p>
       <h4>Looping through an iterable</h4>
       <hr>
 
